--- a/assessment/read-more.html
+++ b/assessment/read-more.html
@@ -95,90 +95,37 @@
           <a href="insights_recommendations.html">Insights and Recommendations</a>
         </ul>
       </div>
-
     </header>
     <main>
-      <div class="container">
-        <img src="./images/solo-traveller6.jpg" alt="solo-traveller" style="width:100%;">
-        <div class="top-left">
-          <h1>Connecting and empowering female solo travelers of Brazil</h1>
-          <h3>Meet other women, find travel buddies, and share your experience!</h3>
+      <div class="guide">
+        <div class="guide-page">
+            <div class="guide-top">
+                <div class="guide-info">
+                    <h3>Brasilia Travel Safety Guide</h3>
+                    <p class="description">Don't let the fear stop you!</p>
+                    <p class="author">By Claire Willows</p>
+                    <p>October 26 2024</p>
+                </div>
+                <div class="guide-image">
+                    <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
+                </div>
+            </div>
         </div>
       </div>
 
-      <div>
-        <h2>Upcoming Events</h2>
+      <div class="guide-text">
+        <h2>Introduction</h2>
+        <p>Brasilia, the capital of Brazil, is renowned for its modernist architecture and unique urban planning. While the city offers an array of cultural attractions and beautiful parks, it is essential to prioritize safety to ensure a pleasant visit. This guide provides practical tips and recommendations for a safe and enjoyable experience in Brasilia.</p>
+        <h2>Understanding the city</h2>
+        <p>Brasilia is divided into several sectors, each with its distinct purpose, such as residential, commercial, and governmental areas. The city's layout makes navigation relatively straightforward; however, being aware of your surroundings is crucial.</p>
       </div>
-
-      <!-- Slideshow container code reference: https://www.w3schools.com/howto/howto_js_slideshow.asp--> 
-      <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
-        <div class="mySlides">
-          <div class="slide-container">
-            <div class="image-container">
-              <img src="./images/Carnival_Brazil.png" style="width:100%;">
-              <div class="text">Carnival</div>
-            </div>
-            <div class="image-container">
-              <img src="./images/DJ_Night.png" style="width:100%;">
-              <div class="text">DJ Night</div>
-            </div>
-          </div>
+      <div class="guide-end>">
+        <div class="guide-meta">
+          <span>1d ago</span> | 
+          <span>224 views</span> | 
+          <span>6 comments</span>
         </div>
-        <div class="mySlides">
-          <div class="slide-container">
-            <div class="image-container">
-              <img src="./images/Music_Festival.png" style="width: 100%;">
-              <div class="text">Music Festival</div>
-            </div>
-
-            <div class="image-container">
-              <img src="./images/Night_Club.png" style="width:100%;">
-              <div class="text">Night Club</div>
-            </div>
-
-          </div>
-        </div>
-      <!-- Next and previous buttons -->
-      <!--Anchor tag used to perform an action.-->
-      <!--Onclick specifies when link is clicked, execute plusSlides with argument -1, indicating that function should show previous slide in slideshow.-->
-      <!--&#10094 represents special character (left-pointing arrow (◀)) in HTML character reference format.-->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
-      <br>
-
-      <!-- The dots/circles -->
-      <div style="text-align:left">
-      <!-- Indicate current slide-->
-      <!--Span - inline container to group content for styling or apply JS functions.-->
-      <!--Onclick attribute specifies that when dot is clicked, it executes a JS function called currentSlide with an argument of 1, 2,3 or 4 based on slide number-->
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-      </div>
-
-
-      <div class="title-container4">
-          <div class="container-headings">
-            <h1>Are you feeling unsafe?</h1>
-            <h3>Search for a contact or click on one below.</h3>
-          </div>
-          <img src="./images/sos.png" alt="Group Photo">
-      </div>
-
-      
-      <div class="emergency-container">
-        <div class="rescue">Rescue</div>
-        <div class="hospital">Hospital</div>
-        <div class="parents">Parents</div>
-        <div class="police">Police</div>
-        <div class="firefighter">Firefighter</div>
-        <div class="friends">Friends</div>
-    </div>
-  </div
-      
-
 
     </main>
     <footer>
